# Lavinder

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  dev.sh  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  sphinx_lavinder.py
docs/man/: lavinder.rst
docs/manual/: contributing.rst  faq.rst  hacking.rst
docs/manual/commands/: dlavinder-cmd.rst  index.rst  lavinder-cmd.rst  lavinder-run.rst  lavinder-top.rst  qshell.rst  scripting.rst
docs/manual/config/: gnome.rst  hooks.rst  index.rst  keys.rst  layouts.rst  lazy.rst  screens.rst
docs/manual/install/: arch.rst  fedora.rst  funtoo.rst  index.rst  slackware.rst  ubuntu.rst
docs/manual/ref/: commands.rst
liblavinder/: bar.py  command.py  config.py  hook.py  log_utils.py  scratchpad.py  sh.py  state.py  utils.py  window.py
liblavinder/core/: manager.py  xcbq.py
liblavinder/extension/: base.py  command_set.py  dmenu.py  window_list.py
liblavinder/layout/: columns.py
liblavinder/resources/: default_config.py
liblavinder/scripts/: lavinder.py  lavinder_top.py
liblavinder/widget/: backlight.py  base.py  battery.py  check_updates.py  generic_poll_text.py  groupbox.py  net.py  prompt.py
resources/: README  lavinder.1  lavinder.desktop  qshell.1
rpm/: lavinder.spec
scripts/: addlicence.sh  ffibuild  qtb  xephyr
test/: conftest.py  test_bar.py  test_command.py  test_config.py  test_configurable.py  test_fakescreen.py  test_hook.py  test_images.py  test_images2.py  test_manager.py  test_scratchpad.py  test_sh.py  test_utils.py  test_xcbq.py
test/configs/: basic.py
test/core/: test_xcore.py
test/layouts/: test_bsp.py  test_columns.py  test_common.py  test_floating.py  test_matrix.py  test_max.py  test_ratiotile.py  test_slice.py  test_stack.py  test_tile.py  test_verticaltile.py  test_xmonad.py  test_zoomy.py
test/scripts/: window.py
test/widgets/: conftest.py  test_battery.py  test_misc.py  test_volume.py
