[metadata]
name = lavinder
version = 0.13.0
url = http://github.com/g--o/Lavinder
license = MIT
license_file = LICENSE
description = A pure-Python tiling window manager.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = LavinderTeam
author_email = gitter
keywords =
  lavinder
  tiling
  window
  manager
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: BSD :: FreeBSD
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Desktop Environment :: Window Managers
project_urls =
  Documentation = http://docs.lavinder.org/
  Code = https://github.com/lavinder/lavinder/
  Issue tracker = https://github.com/lavinder/lavinder/issues


[options]
packages = find:
python_requires >= 3.6
setup_requires =
  cffi >= 1.1.0
  cairocffi[xcb] >= 0.9.0
  setuptools
install_requires =
  cffi >= 1.1.0
  cairocffi[xcb] >= 0.9.0
  xcffib >= 0.5.0
tests_require =
  flake8
  pep8-naming
  pytest-cov
  xvfbwrapper
scripts =
  bin/dlavinder-cmd
  bin/iqshell

[options.data_files]
/share/man/man1 =
  resources/lavinder.1
  resources/qshell.1

[options.entry_points]
console_scripts =
  qshell = liblavinder.scripts.qshell:main
  lavinder = liblavinder.scripts.lavinder:main
  lavinder-cmd = liblavinder.scripts.lavinder_cmd:main
  lavinder-run = liblavinder.scripts.lavinder_run:main
  lavinder-top = liblavinder.scripts.lavinder_top:main

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
  sphinxcontrib-seqdiag
  numpydoc
test =
  flake8
  pep8-naming
  pytest-cov
  xvfbwrapper
ipython =
  ipykernel
  jupyter_console

[options.packages.find]
include =
    liblavinder*

[options.package_data]
liblavinder.resources.battery-icons = *.png
liblavinder.resources.layout-icons = *.png


[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
exclude = liblavinder/_ffi*.py,liblavinder/core/_ffi*.py
max-line-length = 120

[tool:pytest]
python_files = test_*.py
testpaths = test
addopts = --verbose

[check-manifest]
ignore =
    stubs**

[mypy]
mypy_path = stubs
python_version = 3.5
[mypy-_cffi_backend]
ignore_missing_imports = True
[mypy-cairocffi._ffi]
ignore_missing_imports = True
[mypy-cairocffi.pixbuf]
ignore_missing_imports = True
[mypy-liblavinder._ffi_pango]
ignore_missing_imports = True
[mypy-liblavinder.core._ffi_xcursors]
ignore_missing_imports = True
[mypy-xcffib._ffi]
ignore_missing_imports = True
